[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Lasers/LaserAlways.gd" type="Script" id=1]
[ext_resource path="res://sprites/Particles/spotlight_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Objects/laser.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.748428, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.620087, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.00384615, 0.742718, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0.1 ), 0.0, -0.101552, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
tangential_accel = 100.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="Animation" id=14]
length = 14.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 4, 10, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 180.0, 180.0, 0.0, 0.0 ]
}

[sub_resource type="StreamTexture" id=15]
load_path = "res://.import/Light32.png-33af54609540d747459bc89eeca383a8.stex"

[node name="LaserAlways" type="RayCast2D"]
position = Vector2( 0, 1 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 320, 0 )
collision_mask = 13
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 2, 1, 1, 1 )
material = SubResource( 1 )
points = PoolVector2Array( 0, 0, 32, 0 )
width = 1.0
default_color = Color( 1, 0.282353, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RayCastPlayer" type="RayCast2D" parent="."]
z_index = -1
enabled = true
cast_to = Vector2( 320, 0 )
collision_mask = 16

[node name="CastingParticles" type="Particles2D" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
lifetime = 0.5
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="CollisionParticles" type="Particles2D" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.15, 0.15 )
z_index = 1
lifetime = 0.5
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="BeamParticles" type="Particles2D" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.2, 0.2 )
amount = 18
lifetime = 0.5
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/rotate = SubResource( 14 )

[node name="laser" type="Sprite" parent="."]
position = Vector2( 0.5, 3.57628e-06 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2, -7.15256e-06 )
texture = SubResource( 15 )
color = Color( 1, 0.282353, 0, 1 )
range_item_cull_mask = 3
__meta__ = {
"_editor_description_": ""
}
